# Data-Engineering-Basics

./: .env.example  .gitignore  Makefile  README.md  USER_GUIDE.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
airflow/: README.md  requirements.txt
airflow/dags/: batch_ingest_dag.py  quality_publish_dag.py  transform_dbt_dag.py
airflow/plugins/: openlineage_listener.py
analytics_dbt/: README.md  dbt_project.yml
analytics_dbt/macros/: generate_surrogate_key.sql
analytics_dbt/models/: schema.yml
analytics_dbt/profiles/: profiles.yml.example
analytics_dbt/seeds/: customers_seed.csv
analytics_dbt/snapshots/: snp_customers.sql
cdc/: README.md
cdc/connect/: register-postgres-source.json
contracts/raw/: customers.yml  events.yml  orders.yml  products.yml
data/raw/: orders.csv  products.csv
docs/adrs/: 0001-open-source-stack.md
docs/architecture/: architecture_diagram.mmd  system_architecture.md
docs/governance/: change_management.md  definition_of_done.md  naming_standards.md
docs/postmortems/: 2026-incident-001-late-arrival.md  2026-incident-002-contract-break.md  2026-incident-003-cdc-evolution.md
docs/roadmap/: 32_week_learning_roadmap.md  assessment_rubric.md  setup_local.md  (+6 more)
ingestion/: README.md  pyproject.toml
ingestion/src/ingestion/: __init__.py  loaders.py  pipeline.py  sources.yml  state.py
ingestion/tests/: test_state.py
lineage/: README.md  openlineage.yml
scripts/: bootstrap.sh  run_quality_gate.sh  verify_contracts.py
soda/: configuration.yml
sql/: init_warehouse.sql
superset/: README.md
(+21 files in other folders)
