[project]
name = "open-source-ingestion"
version = "0.1.0"
description = "Config-driven ingestion framework for analytics engineering roadmap"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2",
  "PyYAML>=6.0",
  "requests>=2.31"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
